--- a/city-pollution-levels/package.json
+++ b/city-pollution-levels/package.json
@@ -11,6 +11,9 @@
   "author": "MightyCoderX",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
     "dotenv-webpack": "^7.0.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
