--- a/city-pollution-levels/package.json
+++ b/city-pollution-levels/package.json
@@ -14,7 +14,6 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
-    "dotenv-webpack": "^7.0.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "uuid": "^8.3.2",
@@ -23,6 +22,7 @@
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "lodash": "^4.17.21"
   }
 }
