--- a/city-pollution-levels/package.json
+++ b/city-pollution-levels/package.json
@@ -16,10 +16,10 @@
     "babel-loader": "^8.2.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
-    "uuid": "^8.3.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
