--- a/city-pollution-levels/package.json
+++ b/city-pollution-levels/package.json
@@ -14,12 +14,13 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "uuid": "^8.3.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "uuid": "^8.3.2"
+    "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
